# FocusBuddy

./: .gitignore  aws_bucket_policy.json  config.py  database.py  email_utils.py  main.py  models.py  package-lock.json  pyproject.toml  schemas.py
alembic/versions/: 282f83d70372_initial_schema.py
backend/: auth.py  aws_iam_policy.json  main.py  pyproject.toml  schemas.py  seed_sessions.py
backend/alembic/: env.py
backend/routers/: sessions.py  users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  NavBar.tsx  ProtectedRoute.tsx  SessionConfig.tsx  Timer.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: timer.test.ts  timer.ts
frontend/src/pages/: ForgotPassword.tsx  LoginPage.tsx  ProfilePage.tsx  ResetPassword.tsx  SignUpPage.tsx  StatPage.tsx  TimerPage.tsx
frontend/src/services/: api.ts  auth.ts  session.ts  stats.ts  user.ts
frontend/src/types/: password.ts  session.ts  stats.ts  user.ts
frontend/src/utils/: errorUtils.ts  passwordValidation.ts
routers/: sessions.py  users.py
tests/: test_schedule.py
