[project]
name = "focusbuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.3",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.3",
    "pytest>=9.1.0",
]
